# lumen-mcp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  UPSTREAM_LUMEN.md  pyproject.toml
.github/workflows/: ci.yml
examples/: make_demo_db.py  make_sample_db.py
src/lumen_mcp/: __init__.py  _dashboard_app.py  _shims.py  agentic.py  live.py  rendering.py  report.py  server.py  session.py  session_io.py  sources.py  viz.py
src/lumen_mcp/apps/: setup.html
tests/: test_dashboard.py  test_keyed.py  test_roundtrip.py  test_slice.py
